# homework

./: .gitignore  README.md  README_REFACTOR.md  build.sh  homework1_calculator.cpp  program
01.03.26 - LongNumbers/: .gitignore  README.md
01.03.26 - LongNumbers/projects/LN/: CMakeLists.txt
01.03.26 - LongNumbers/projects/LN/src/: LongNumber.cpp  LongNumbers.hpp
01.03.26 - LongNumbers/projects/LN/test/: CMakeLists.txt  test_LN.cpp  test_LN.hpp
03.05.26 - Mario_before_ref/: main.cpp  mario
19.05.26 - Mario_refactoring/: main.cpp  mario
20.05.26 - Mario_OOP/: BaseObject.cpp  BaseObject.hpp  Brick.hpp  Constants.hpp  Game.cpp  Game.hpp  Mario.cpp  Mario.hpp  MovingItems.cpp  MovingItems.hpp  main.cpp  map.cpp  map.hpp  mario_game
20.05.26 - Mario_OOP — копия/: BaseObject.cpp  BaseObject.hpp  Brick.cpp  Brick.hpp  Game.cpp  Game.hpp  Mario.cpp  Mario.hpp  MovingItems.cpp  MovingItems.hpp  main.cpp
2026_03_14_vector_list/: CMakeLists.txt
2026_03_14_vector_list/test/: CMakeLists.txt  test_doubly_linked_list.cpp  test_vector.cpp
25.10.17 refactoring/: after_refactoring_5 copy  after_refactoring_5 copy.cpp  before_refactoring_4.cpp  before_refactoring_4 — копия  before_refactoring_4 — копия.cpp  before_refactoring_5.cpp
homework 3/: build_run_project_app.bat  element_functions.cpp  element_functions.h  main.cpp  menu.h  menu_elements.cpp  menu_elements.h  project
homework1/: expression_calculations.cpp  expression_calculations.hpp  homework1_calculator  homework1_calculator.cpp  main.cpp
hw3_class/: build_run.bat  elem_func.cpp  elem_func.h  main.cpp  (+5 more)
(+38 files in other folders)
